pippijn     2006/09/10 21:05:56 UTC	(20060910-6349)
  Log:
  Fixed some snprintf's to cast time_t to long unsigned integers and got rid
  of an unused variable.
  

  Changes:	Modified:
  +0 -1		trunk/modules/saslserv/dh-blowfish.c (File Modified) 
  +2 -2		trunk/modules/xmlrpc/memo.c (File Modified) 
  +2 -2		trunk/src/function.c (File Modified) 


jilles      2006/09/10 20:24:16 UTC	(20060910-6347)
  Log:
  last commit forgot a strtok in ns_enforce.c
  

  Changes:	Modified:
  +2 -2		trunk/contrib/ns_enforce.c (File Modified) 


jilles      2006/09/10 20:19:07 UTC	(20060910-6345)
  Log:
  Update contrib to sourceinfo.
  

  Changes:	Modified:
  +12 -13	trunk/contrib/cs_count.c (File Modified) 
  +5 -5		trunk/contrib/cs_ping.c (File Modified) 
  +23 -16	trunk/contrib/ircd_catserv.c (File Modified) 
  +38 -39	trunk/contrib/ns_enforce.c (File Modified) 
  +59 -60	trunk/contrib/ns_generatepass.c (File Modified) 
  +15 -15	trunk/contrib/os_pingspam.c (File Modified) 
  +59 -60	trunk/contrib/us_generatepass.c (File Modified) 


jilles      2006/09/10 19:43:19 UTC	(20060910-6343)
  Log:
  Get rid of third value "ERROR" in boolean_t,
  before anyone uses it.
  

  Changes:	Modified:
  +1 -1		trunk/libatheme/stdinc.h (File Modified) 


jilles      2006/09/10 16:36:29 UTC	(20060910-6341)
  Log:
  Rename sourceinfo_t.sptr to sourceinfo_t.service,
  to avoid confusion with sourceinfo_t.s.
  

  Changes:	Modified:
  +1 -1		trunk/include/sourceinfo.h (File Modified) 
  +8 -8		trunk/src/ptasks.c (File Modified) 


jilles      2006/09/10 16:18:54 UTC	(20060910-6339)
  Log:
  operserv modload/modunload:
  Get rid of comparison between signed and unsigned.
  

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/modload.c (File Modified) 
  +1 -1		trunk/modules/operserv/modunload.c (File Modified) 


pippijn     2006/09/10 15:54:41 UTC	(20060910-6337)
  Log:
  Merged in sourceinfo changes to the services layer.
  

  Changes:	Modified:
  +8 -0		trunk/TODO (File Modified) 