@@ -4,13 +4,14 @@
  *
  * Datastream query stuff.
  *
- * $Id: org.atheme.claro.base.datastream 6325 2006-09-07 22:39:09Z jilles $
+ * $Id: org.atheme.claro.base.datastream 6353 2006-09-11 13:54:43Z jilles $
  */
 #ifndef __CLARODATASTREAM
 #define __CLARODATASTREAM
 
 E void sendq_add(connection_t *cptr, char *buf, int len, int pos);
 E void sendq_flush(connection_t *cptr);
+E boolean_t sendq_nonempty(connection_t *cptr);
 E void sendqrecvq_free(connection_t *cptr);
 
 #endif
