@@ -4,7 +4,7 @@
  *
  * Socketengine implementing select().
  *
- * $Id: select.c 5313 2006-05-25 15:18:32Z jilles $
+ * $Id: select.c 6353 2006-09-11 13:54:43Z jilles $
  */
 
 #include <org.atheme.claro.base>
@@ -59,7 +59,7 @@ static void update_select_sets(void)
 		else if (CF_IS_LISTENING(cptr))
 			FD_SET(cptr->fd, &readfds);
 
-		if (cptr->sendq.count != 0)
+		if (sendq_nonempty(cptr))
 			FD_SET(cptr->fd, &writefds);
 
 		else
